--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,18 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+img {
+	width: 300px;
+}
+
+.left {
+	float: left;
+	margin: 15px 15px 15px 0;
+}
+
+
+.right {
+	float: right;
+	margin: 15px 0 15px 15px;
+}
